# -Stellar-Unified-Price-Oracle-Aggregator-API-Backend

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  INTEGRATION_TESTS.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.husky/: pre-push
api/: Dockerfile  eslint.config.js  openapi.json  package-lock.json  package.json  vitest.config.integration.ts  vitest.config.ts
contracts/price-oracle/: Cargo.toml  FUZZ_TESTING.md  GAS_OPTIMIZATION.md  MERKLE_BATCH.md
contracts/price-oracle/fuzz/: Cargo.toml
contracts/price-oracle/fuzz/corpus/fuzz_get_price/: seed_empty_submissions  seed_max_limit  seed_single_btc_limit1  seed_single_xlm  seed_zero_limit
contracts/price-oracle/fuzz/corpus/fuzz_submit_price/: seed_btc_price_max  seed_eth_price_min  seed_large_decimals  seed_long_asset  seed_unauthorized  seed_xlm_price_zero
contracts/price-oracle/fuzz/fuzz_targets/: fuzz_get_price.rs  fuzz_submit_price.rs
contracts/price-oracle/src/: contract.rs  errors.rs  fuzz.rs  gas_benchmarks.rs  governance.rs  governance_test.rs  lib.rs  merkle.rs  merkle_test.rs  multisig.rs  proxy.rs  storage.rs  test.rs  types.rs
contracts/price-oracle/test_snapshots/fuzz/: fuzz_multiple_sources_concurrent_submissions.1.json
contracts/price-oracle/test_snapshots/test/: test_admin_cannot_be_replaced_by_non_admin.1.json  test_oracle_source_management.1.json  test_source_cannot_self_authorize.1.json
docs/: CANARY_DEPLOYMENTS.md
fly/: aggregator.fly.toml  api.fly.toml
k8s/: README.md
monitoring/: README.md  (+9 more)
(+304 files in other folders)
